--- a/Time Forecasting Project.ipynb
+++ b/Time Forecasting Project.ipynb
@@ -57,40 +57,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Loading CSV File\n",
-    "df_rose=pd.read_csv(\"Rose.csv\", index_col=0)\n",
-    "df_spark=pd.read_csv(\"Sparkling.csv\",index_col=0)"
+    "df_rose=pd.read_csv(\"Rose.csv\")\n",
+    "df_spark=pd.read_csv(\"Sparkling.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "            Rose\n",
-      "YearMonth       \n",
-      "1980-01    112.0\n",
-      "1980-02    118.0\n",
-      "1980-03    129.0\n",
-      "1980-04     99.0\n",
-      "1980-05    116.0\n",
+      "  YearMonth   Rose\n",
+      "0   1980-01  112.0\n",
+      "1   1980-02  118.0\n",
+      "2   1980-03  129.0\n",
+      "3   1980-04   99.0\n",
+      "4   1980-05  116.0\n",
       "\n",
       "\n",
-      "           Sparkling\n",
-      "YearMonth           \n",
-      "1980-01         1686\n",
-      "1980-02         1591\n",
-      "1980-03         2304\n",
-      "1980-04         1712\n",
-      "1980-05         1471\n"
+      "  YearMonth  Sparkling\n",
+      "0   1980-01       1686\n",
+      "1   1980-02       1591\n",
+      "2   1980-03       2304\n",
+      "3   1980-04       1712\n",
+      "4   1980-05       1471\n"
      ]
     }
    ],
@@ -102,29 +100,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Rose\n",
-      "YearMonth      \n",
-      "1995-03    45.0\n",
-      "1995-04    52.0\n",
-      "1995-05    28.0\n",
-      "1995-06    40.0\n",
-      "1995-07    62.0\n",
+      "    YearMonth  Rose\n",
+      "182   1995-03  45.0\n",
+      "183   1995-04  52.0\n",
+      "184   1995-05  28.0\n",
+      "185   1995-06  40.0\n",
+      "186   1995-07  62.0\n",
       "\n",
       "\n",
-      "           Sparkling\n",
-      "YearMonth           \n",
-      "1995-03         1897\n",
-      "1995-04         1862\n",
-      "1995-05         1670\n",
-      "1995-06         1688\n",
-      "1995-07         2031\n"
+      "    YearMonth  Sparkling\n",
+      "182   1995-03       1897\n",
+      "183   1995-04       1862\n",
+      "184   1995-05       1670\n",
+      "185   1995-06       1688\n",
+      "186   1995-07       2031\n"
      ]
     }
    ],
@@ -136,15 +132,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of Rose : (187, 1)\n",
-      "Shape of Sparkling : (187, 1)\n"
+      "Shape of Rose : (187, 2)\n",
+      "Shape of Sparkling : (187, 2)\n"
      ]
     }
    ],
@@ -155,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -163,24 +159,26 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 187 entries, 1980-01 to 1995-07\n",
-      "Data columns (total 1 columns):\n",
-      " #   Column  Non-Null Count  Dtype  \n",
-      "---  ------  --------------  -----  \n",
-      " 0   Rose    185 non-null    float64\n",
-      "dtypes: float64(1)\n",
-      "memory usage: 2.9+ KB\n",
+      "RangeIndex: 187 entries, 0 to 186\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column     Non-Null Count  Dtype  \n",
+      "---  ------     --------------  -----  \n",
+      " 0   YearMonth  187 non-null    object \n",
+      " 1   Rose       185 non-null    float64\n",
+      "dtypes: float64(1), object(1)\n",
+      "memory usage: 3.1+ KB\n",
       "None\n",
       "\n",
       "\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 187 entries, 1980-01 to 1995-07\n",
-      "Data columns (total 1 columns):\n",
-      " #   Column     Non-Null Count  Dtype\n",
-      "---  ------     --------------  -----\n",
-      " 0   Sparkling  187 non-null    int64\n",
-      "dtypes: int64(1)\n",
-      "memory usage: 2.9+ KB\n",
+      "RangeIndex: 187 entries, 0 to 186\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column     Non-Null Count  Dtype \n",
+      "---  ------     --------------  ----- \n",
+      " 0   YearMonth  187 non-null    object\n",
+      " 1   Sparkling  187 non-null    int64 \n",
+      "dtypes: int64(1), object(1)\n",
+      "memory usage: 3.1+ KB\n",
       "None\n"
      ]
     }
@@ -193,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -243,13 +241,13 @@
      "output_type": "stream",
      "text": [
       "         Rose\n",
-      "count  187.00\n",
-      "mean    90.35\n",
-      "std     38.97\n",
+      "count  185.00\n",
+      "mean    90.39\n",
+      "std     39.18\n",
       "min     28.00\n",
       "25%     63.00\n",
       "50%     86.00\n",
-      "75%    111.00\n",
+      "75%    112.00\n",
       "max    267.00\n",
       "\n",
       "        Sparkling\n",
@@ -271,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +277,7 @@
      "output_type": "stream",
      "text": [
       "Null values in Rose : \n",
-      " Rose    0\n",
+      " Rose    2\n",
       "dtype: int64\n",
       "\n",
       "\n",
@@ -297,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -332,35 +330,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "date_rose = pd.date_range(start='1/1/1956', end='9/1/1995', freq='M')"
+    "date_rose = pd.date_range(start='1/1/1980', end='8/1/1995', freq='ME')\n",
+    "date_spark = pd.date_range(start='1/1/1980', end='8/1/1995', freq='M')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Columns must be same length as key",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_12880\\352908125.py\u001b[0m in \u001b[0;36m?\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf_rose\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Time_Stamp'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf_rose\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mdf_rose\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\Dell\\anaconda\\Lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m?\u001b[1;34m(self, key, value)\u001b[0m\n\u001b[0;32m   4297\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_setitem_frame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4298\u001b[0m         \u001b[1;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mSeries\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mndarray\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mIndex\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4299\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_setitem_array\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4300\u001b[0m         \u001b[1;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mDataFrame\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 4301\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_set_item_frame_value\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   4302\u001b[0m         elif (\n\u001b[0;32m   4303\u001b[0m             \u001b[0mis_list_like\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4304\u001b[0m             \u001b[1;32mand\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mis_unique\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\Dell\\anaconda\\Lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m?\u001b[1;34m(self, key, value)\u001b[0m\n\u001b[0;32m   4425\u001b[0m             \u001b[0mloc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4426\u001b[0m             \u001b[0mcols\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4427\u001b[0m             \u001b[0mlen_cols\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mis_scalar\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcols\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcols\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtuple\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32melse\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcols\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4428\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mlen_cols\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 4429\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Columns must be same length as key\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   4430\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4431\u001b[0m             \u001b[1;31m# align right-hand-side columns if self.columns\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4432\u001b[0m             \u001b[1;31m# is multi-index and self[key] is a sub-frame\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: Columns must be same length as key"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            Rose Time_Stamp\n",
+      "YearMonth                  \n",
+      "1980-01    112.0        NaT\n",
+      "1980-02    118.0        NaT\n",
+      "1980-03    129.0        NaT\n",
+      "1980-04     99.0        NaT\n",
+      "1980-05    116.0        NaT\n",
+      "\n",
+      "\n",
+      "           Sparkling Time_Stamp\n",
+      "YearMonth                      \n",
+      "1980-01         1686        NaT\n",
+      "1980-02         1591        NaT\n",
+      "1980-03         2304        NaT\n",
+      "1980-04         1712        NaT\n",
+      "1980-05         1471        NaT\n"
      ]
     }
    ],
    "source": [
-    "df_rose['Time_Stamp'] = pd.DataFrame(df_rose)\n",
-    "df_rose.head()"
+    "df_rose['Time_Stamp'] = pd.DataFrame(date_rose,columns=['Month'])\n",
+    "df_spark['Time_Stamp'] = pd.DataFrame(date_spark,columns=['Month'])\n",
+    "print(df_rose.head())\n",
+    "print(\"\\n\")\n",
+    "print(df_spark.head())"
    ]
   },
   {
